--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,11 @@
 pkg-resources==0.0.0
 selenium==3.141.0
 urllib3==1.25.8
+numpy==1.18.1
+pandas==1.0.1
+pkg-resources==0.0.0
+python-dateutil==2.8.1
+pytz==2019.3
+selenium==3.141.0
+six==1.14.0
+urllib3==1.25.8
